# SDLGameHelper

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  gamehelper
Debug/src/.deps/: axa-animation.Po  axa-entity.Po  axa-event.Po  axa-surface.Po  axa-tile.Po  game-helper.Po  game-helper_cleanUp.Po  game-helper_handleEvents.Po  game-helper_init.Po  game-helper_render.Po  game-helper_update.Po  main.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Define.h~  Makefile.am  Makefile.in  axa-animation.cc  axa-animation.cc~  axa-animation.h  axa-animation.h~  axa-area.cc  axa-area.h  axa-camera.cc  axa-camera.h  axa-entity.cc  axa-entity.h  axa-event.cc  axa-event.cc~  axa-event.h  axa-event.h~  axa-map.cc  axa-map.h  axa-surface.cc  axa-surface.cc~  axa-surface.h  axa-surface.h~  axa-tile.cc  axa-tile.h  define.h  define.h~  game-helper.cc  game-helper.cc~  game-helper.h  game-helper.h~  game-helper_cleanUp.cxx  game-helper_cleanUp.cxx~  game-helper_handleEvents.cc  game-helper_handleEvents.cc~  game-helper_init.cc  game-helper_init.cc~  game-helper_render.cc  game-helper_render.cc~  game-helper_update.cc  (+4 more)
